<resources>
    <string name="app_name">NutriFit Local</string>
    <string name="bienvenida_slider">¡Bienvenidos a NutriFit Planner!</string>
    <string name="bienvenida_slider_p">Tu plataforma integral para citas y planes nutricionales.</string>
    <string name="bienvenida_slider2">NutriFit Planner. Tu aliado en nutrición y bienestar.</string>
    <string name="bienvenida_slider2_p">Juntos trabajaremos para mejorar tu calidad de vida.</string>
    <string name="bienvenida_slider3">NutriFit Planner</string>
    <string name="bienvenida_slider3_p">Nutrición basada en la evidencia.</string>
    <string name="todo">TODO</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="default_notification_channel_name">Notificaciones</string>
    <string name="loginText">Bienvenido de nuevo</string>
    <string name="FieldLogin1">Correo Electrónico</string>
    <string name="FieldLogin2">Contraseña</string>
    <string name="Check">Recuérdamelo</string>
    <string name="ButtonLogin">Iniciar Sesión</string>
    <string name="ContraOlvidada">Has olvidado tu contraseña</string>
    <string name="opcion">Ó inicia sesión con</string>
    <string name="textBottomLogin">¿No tienes cuenta?</string>
    <string name="textBottomLoginAcc">Registrate Ahora</string>
    <string name="registerText">Únete a NutriFit Planner</string>
    <string name="FieldRegisterText">Nombre</string>
    <string name="FieldRegisterText2">Apellidos</string>
    <string name="FieldUsuarioText3">Correo Electrónico</string>
    <string name="FieldTelefonoText4">Usuario</string>
    <string name="FieldContraseñaText5">Contraseña</string>
    <string name="ButtonRegisterField">Unirme</string>
    <string name="alternativa">O unete con</string>
    <string name="tieneCuenta">¿Ya tiene una cuenta unida?</string>
    <string name="regresarLogin">Iniciar Sesión</string>
    <string name="recuperarContra">Recuperar Contraseña</string>
    <string name="metodoRecuperar">Correo Electrónico</string>
    <string name="enviarCorreo">Enviar</string>
    <string name="requisito">Ingresa el correo asociado a tu \ncuenta para recuperar tu contraseña</string>
    <string name="cambioContra">Cambiar Contraseña</string>
    <string name="FieldTextCambio">Nueva Contraseña</string>
    <string name="FieldTextConfirm">Confirmar Contraseña</string>
    <string name="buttonChange">Cambiar Contraseña</string>
    <string name="FieldButtonChange">Mínimo 8 caracteres, combinando letras, \nnúmeros y símbolos. No la compartas.</string>
    <string name="TitleVerificacion">Verificar Cuenta</string>
    <string name="SubTitleVerifiacion">Se ha enviado un código de verificación a su dirección de correo electrónico.</string>
    <string name="CodeVerificacion">Código de verificación</string>
    <string name="submit">Verificar</string>
    <string name="textButtomVerifi">Último paso antes de comenzar tu transformación</string>
    <string name="mensageWelcome"><b>Hola, Alcyra. ¡Bienvenida!</b>\nEstamos encantados de tenerte aquí</string>
    <string name="messageH2">Mi progreso</string>
    <string name="messageH2_">¡Tu salud es la prioridad!</string>
    <string name="textCard1">Planes Alimenticios</string>
    <string name="textCard2">Historial Nutricional</string>
    <string name="textCard3">Desafíos Nutrifit </string>
    <string name="textCard4">Perfil De Salud</string>
    <string name="primeryCase">Peso (Kg)</string>
    <string name="caseTwo">Grasa Corporal </string>
    <string name="caseThree">Masa Muscular </string>
    <string name="caseTwoPorcen">201</string>
    <string name="caseTwoPorcen2">300</string>
    <string name="caseTwoPorcen3">320</string>
    <string name="caseTwoPorcen4">420</string>
    <string name="password_hint">Contraseña</string>
    <string name="password_requirements">Requisitos de contraseña:</string>
    <string name="listAlimen">Lista de tus planes alimenticios</string>
    <string name="consultasAhora">Reservaciones En Espera</string>
    <string name="consultaProximas">Reservaciones Confirmadas / En Progreso</string>
    <string name="consultaPasadas">Reservaciones Concluidas</string>
    <string name="historialConsulta">Tu Historial Nutricional Personalizado</string>
    <string name="type_your_message">Escribe tu mensaje</string>
    <string name="consultaInfo">Alycra Lumina </string>
    <string name="consultaInfo2">Femenino </string>
    <string name="consultaInfo3">12/12/2002</string>
    <string name="consultaInfo4">Mérida, Yucatán</string>
    <string name="consultaSubInfo1">Peso (kg):</string>
    <string name="consultaSubInfo1_1">55 kg</string>
    <string name="consultaSubInfo2">Talla: </string>
    <string name="consultaSubInfo1_2">M </string>
    <string name="consultaSubInfo3">Cintura:</string>
    <string name="consultaSubInfo1_3">65 cm</string>
    <string name="consultaSubInfo4">Cadera:</string>
    <string name="consultaSubInfo1_4">92 cm</string>
    <string name="consultaSubInfo5">GC:</string>
    <string name="consultaSubInfo1_5">25%</string>
    <string name="consultaSubInfo6">MM:</string>
    <string name="consultaSubInfo1_6">38%</string>
    <string name="consultaSubInfo7">EM:</string>
    <string name="consultaSubInfo1_7">20 años</string>
    <string name="consultaSubInfo8">Altura:</string>
    <string name="consultaSubInfo1_8">1.65 m</string>
    <string name="consultaInfo5">Horario de consulta</string>
    <string name="consultaSubInfo2_1">Hoy, 15 de marzo del 2025</string>
    <string name="consultaSubInfo2_2"><b>08 : 00 AM</b> Nut. Rodolfo Cárdenaz</string>
    <string name="consultaInfo6">Diagnóstico:</string>
    <string name="consultaSubInfo3_1">Detalles del Diagnóstico</string>
    <string name="consultaSubPInfo_1">Sin Datos</string>
    <string name="consultaSubInfo3_2">Resultados de la Evaluación</string>
    <string name="consultaSubInfo3_3">Análisis Nutricional</string>
    <string name="consultaInfo7">Objetivo</string>
    <string name="consultaSubInfo4_1">Descripción</string>
    <string name="consultaInfo8">Próxima Consulta</string>
    <string name="consultaSubInfo5_1">Martes, 15 de abril del 2025</string>
    <string name="consultaSubInfo5_2"><b>10 : 00 AM</b> Nut. Rodolfo Cárdenaz</string>
    <string name="consultaInfo9">Consulta Finalizada</string>
    <string name="consultaInfo10">Consulta Cancelada</string>
    <string name="consultaButton1">Sí, Cancelar</string>
    <string name="consultaButton2">No, No Cancelar</string>
    <string name="consultaButtom">Información Consulta</string>
    <string name="graficaSubTexto">Conoce tus avances</string>
    <string name="notificationButton">Marcar como leído</string>
    <string name="notificationButton2">Eliminar Notificaciones</string>
    <string name="hi_max_webber"><b>Hola, Alcyra.</b>\n¡Reserva una cita ahora!</string>
    <string name="name_nut">Nut.Wilbert Edward</string>
    <string name="male">Masculino</string>
    <string name="birthday">02/12/2000</string>
    <string name="ubication">Calikiní, Campeche.</string>
    <string name="Edad2">Edad</string>
    <string name="Edad3">24 años</string>
    <string name="num_height">170 cm</string>
    <string name="paciente">Pacientes</string>
    <string name="paciente2">45</string>
    <string name="_72kg">82kg</string>
    <string name="exp">Experiencia</string>
    <string name="exp2">3 años</string>
    <string name="_20_33">20.33</string>
    <string name="Esp">Perfil</string>
    <string name="Esp3">Especialidad</string>
    <string name="Esp2">Autoinmune</string>
    <string name="b">B+</string>
    <string name="consult">Generar Cita</string>
    <string name="consult_now">Reservar Cita</string>
    <string name="horarioDis">Horarios Disponibles</string>
    <string name="today_may_12_2022">Hoy, 16 de marzo de 2025</string>
    <string name="_01_19_pm_alarm_before_30_minutes"><b>01 : 19 PM</b> Alarma Antes 30 minutes</string>
    <string name="informacionNutri">Conoce un poco de mi</string>
    <string name="for_her_son_3_years_old">Sobre Mí</string>
    <string name="description">Soy Wilbert Edward, nutriologo especializado en el manejo de enfermedades autoinmunes a través de la nutrición. Mi enfoque es brindar un tratamiento personalizado que ayude a optimizar la salud de cada paciente, utilizando dietas específicas para apoyar la regulación del sistema inmunológico. Mi objetivo es ofrecer un enfoque integral que mejore el bienestar y calidad de vida de quienes buscan un apoyo nutricional especializado en su condición.</string>
    <string name="actualizado">Descripción Actualizada</string>
    <string name="my_answer">Mi respuesta nutricional</string>
    <string name="answered_01_25_pm_may_12_2022">Respondido a las 01:25 PM, 16 de marzo de 2025</string>
    <string name="formacion">Formación Profesional</string>
    <string name="formacion2">Universidad</string>
    <string name="universidad">Graduado De La Universidad Autonoma De Campeche, Campus Nutrición</string>
    <string name="diplomado2">Diplomado en Nutrición en Enfermedades Autoinmunes
                                , Diplomado en Nutrición Clínica, Diplomado en Dietética y Alimentación Saludable</string>
    <string name="diplomado">Diplomados</string>
    <string name="participacion">Especialización En Enfermedades AutoInmunes</string>
    <string name="enfermedades">Lupus eritematoso sistémico, Diabetes tipo 1, Vasculitis autoinmune, Enfermedad celíaca, Artritis reumatoide </string>
    <string name="participacion2"></string>
    <string name="review">¡Califícame!</string>
    <string name="cancel_appointment">Cancelar Cita</string>
    <string name="are_you_done_finish_consult_now">¿Has terminado? Finalizar Consulta Ahora</string>
    <string name="accept">Aceptar</string>
    <string name="reject">Rechazar</string>
    <string name="respect_patients_detail_and_privacy_following_the_protocols">Respeta los detalles y la privacidad del paciente siguiendo los protocolos.</string>
    <string name="textbuttominformation">¡Conoce la información de tu nutriologo de confianza!</string>
    <string name="textbuttominformation2">¡Reserva una cita ahora, antes que se llenen los cupos!</string>
    <string name="fecha">Viernes, 28 de marzo del 2025</string>
    <string name="hora"><b>11 : 11 AM</b> con el Nut. Isabel Medina</string>
    <string name="i_think_my_child_has_been_exposed_to_malaria_what_should_i_do_for_it_any_remedies_to_cure_this_quickly">I think my child has been exposed to malaria what should I do for it? Any remedies to cure this quickly?</string>
    <string name="numberNutri">+52 9961122610</string>
    <string name="profesion">Licenciado En Nutrición</string>
    <string name="consult_history">Historial de Consultas</string>
    <string name="write_an_answer">Escribir un comentario</string>
    <string name="write_answer">Guardar Comentario</string>
    <string name="response_details">Detalles de la respuesta</string>
    <string name="optional_note">Satisfacción del Paciente</string>
    <string name="medication_name">Nombre del Paciente</string>
    <string name="prescription">Receta</string>
    <string name="pres_details">Detalles de la receta</string>
    <string name="comentary">Dejame un comentario, ¡tú opinión es importante!</string>
    <string name="still_in_progress">En Progreso</string>
    <string name="next_consults">Próximas Consultas</string>
    <string name="past_consults">Consultas Pasadas</string>
    <string-array name="time">
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
        <item>6 PM</item>
        <item>7 PM</item>
        <item>8 PM</item>
    </string-array>
    <string name="titleDefNutri1">Los Más Recientes</string>
    <string name="titleDefNutri2">Memoramas</string>
    <string name="mis_nutriologos">Mis Nutriologos</string>
    <string name="titleDefNutri3">Próximas A Publicar</string>
</resources>