<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/section_spacing">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/inner_spacing"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_an_answer"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_h4"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_close"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_back_down"
                app:tint="@color/black" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/inner_spacing"
            android:text="@string/medication_name"
            android:textSize="@dimen/text_size_h5"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginVertical="@dimen/inner_spacing"
            android:paddingHorizontal="@dimen/inner_spacing"
            android:background="@drawable/background_radius"
            android:backgroundTint="@color/lightGrey"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/inner_spacing"
            android:text="@string/optional_note"
            android:textSize="@dimen/text_size_h5"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/inner_spacing"
            android:background="@drawable/background_radius"
            android:backgroundTint="@color/lightGrey"
            android:gravity="start"
            android:minHeight="@dimen/_80sdp"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/section_spacing"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/write_answer"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorVariant"
            android:textSize="@dimen/text_size_h6"
            app:cornerRadius="@dimen/_5sdp" />
    </LinearLayout>
</layout>