<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="com.ascrib.nutrifit.ui.patient.HistoryFragment" />
    </data>

    <RelativeLayout
        android:id="@+id/layout_doctor_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/layout_button"
            android:paddingBottom="@dimen/_10sdp"
            android:background="@drawable/bottom_background_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar_dark_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/section_spacing"
                    android:text="@string/still_in_progress"
                    android:textColor="@color/colorVariant"
                    android:textSize="@dimen/text_size_h5" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_in_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:paddingHorizontal="@dimen/section_spacing" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/section_spacing"
                    android:text="@string/next_consults"
                    android:textColor="@color/colorVariant"
                    android:textSize="@dimen/text_size_h5" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_next_consults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:paddingHorizontal="@dimen/section_spacing" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/section_spacing"
                    android:text="@string/past_consults"
                    android:textColor="@color/colorVariant"
                    android:textSize="@dimen/text_size_h5" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_past_consults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:paddingHorizontal="@dimen/section_spacing" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/section_spacing"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/respect_patients_detail_and_privacy_following_the_protocols"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_h6" />
        </LinearLayout>

    </RelativeLayout>

</layout>